--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="save">save</string>
+    <string name="temperature">"Temperature: "</string>
+    <string name="humidity">"Humidity: "</string>
+    <string name="wind_speed">"Wind Speed: "</string>
+    <string name="date">"Date: "</string>
 </resources>
